--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="./index.css" />
   </head>
-  <body>
+  <body class="light">
+    
     <header class="header">
       <h1>My Music Player</h1>
     </header>
@@ -41,6 +42,7 @@
         <div class="icon">
           <i class="fa-solid fa-repeat"></i>
         </div>
+        <div class="divider"></div>
         <div class="icon">
           <i class="fa-solid fa-backward"></i>
         </div>
@@ -50,17 +52,17 @@
         <div class="icon">
           <i class="fa-solid fa-forward"></i>
         </div>
+        <div class="divider"></div>
         <div class="icon">
           <i class="fa-solid fa-heart"></i>
+        </div>
+        <div class="icon">
+          <input type="checkbox" name="" id="darkmode-toggle">
+          <label for="darkmode-toggle"></label>
         </div>
       </div>
     </div>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"
-      integrity="sha512-YsR46MmyChktsyMMou+Bs74oCa/CDdwft7rJ5wlnmDzMj1mzqncsfJamEEf99Nk7IB0JpTMo5hS8rxB49FUktQ=="
-      crossorigin="anonymous"
-    ></script>
     <script src="./scripts/app.js"></script>
   </body>
 </html>
