--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
       </div>
     </div>
 
-    <script src="./scripts/app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
